--- a/CornerKitchen/Info.plist
+++ b/CornerKitchen/Info.plist
@@ -30,6 +30,12 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Quicksand-Regular</string>
+		<string>Quicksand-Bold</string>
+		<string>Quicksand-Light</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
