set up checkin view with animations and proper metrics

--- a/CornerKitchen/Info.plist
+++ b/CornerKitchen/Info.plist
@@ -40,6 +40,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Help us get your location</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
